* Wed Oct 31 2018 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.4.1-0
- Fix the output of utils/compliance_map_migrate

* Fri Oct 19 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.4.1-0
- Fixed the following incorrect parameter types
  - simp::yum::schedule::minute
  - simp::yum::schedule::hour

* Thu Sep 20 2018 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.4.0-0
- Open-Source SCE version 2.0
  - Add bugfix for environments that are just Strings vs Environment objects.
  - Add compliance_markup::loaded_maps() function to return all of the loaded
    compliance data from the puppetserver for debugging
  - Add compliance_markup::telemetry() function to return filenames used to
    load compliance data
  - Add compliance_markup::debug::dump hiera parameter that dumps the cached
    result hash for hiera debugging.
  - Remove pupmod::ca_crl_pull_interval from nist_800_53_rev4.json's since
    the parameter is deprecated.
  - refactor loader to look in:
    - "/SIMP/compliance_profiles"
    - "/simp/compliance_profiles"
    and for backwards compatbility:
    - "/lib/puppetx/compliance"

* Fri Aug 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
- Change 'sudosh' to 'tlog' to support the switch to supported session logging
  software
- Added support for Puppet 5 and OEL
- DISA STIG changes:
  - Added selinux::login_resources
  - Added gdm::settings
  - Added gdm::banner
  - Added gdm::simp_banner
  - Added gdm::dconf_hash
  - Added gnome::dconf_hash

* Thu Jun 28 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
- DISA STIG changes:
  - Updated for pupmod-simp-auditd 8.0.0.  This enforces the
    'stig' audit profile, instead of the 'simp' audit profile.

* Mon Jun 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 2.3.4-0
- DISA STIG changes:
  - Added auditd::config::audit_profiles::simp::audit_crontab_cmd
  - Added auditd::config::audit_profiles::simp::audit_pam_timestamp_check_cmd