@@ -1,3 +1,11 @@
+* Fri Nov 02 2018 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.4.1-0
+- Fix the following keys:
+  - simp::mountpoints::tmp::secure
+  - simp::root_user::manage_group
+  - simp::root_user::manage_perms
+  - simp::root_user::manage_user
+  - ssh::server::conf::pki
+
 * Wed Oct 31 2018 Steven Pritchard <steven.pritchard@onyxpoint.com> - 2.4.1-0
 - Fix the output of utils/compliance_map_migrate
 
